# learning-backend-dev

./: .gitignore  main.py
2-authentication/: package-lock.json  package.json  tsconfig.json
2-authentication/backend/: pyproject.toml  requirements.txt
2-authentication/backend/src/: db.py  main.py
2-authentication/backend/src/models/: otp.py  user.py
2-authentication/backend/src/utils/: security.py
adventure generator full stack project/backend/: main.py  pyproject.toml
adventure generator full stack project/backend/core/: config.py
adventure generator full stack project/backend/db/: database.py
adventure generator full stack project/backend/models/: job.py  story.py
adventure generator full stack project/backend/routers/: job.py  story.py
adventure generator full stack project/backend/schemas/: job.py  story.py
