[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[all]>=0.116.1,<1.0.0",
  "langchain>=0.3.27,<0.4.0",
  "langchain-openai>=0.3.29,<0.4.0",
  "psycopg2-binary>=2.9.10,<3.0.0",
  "python-dotenv>=1.1.1,<2.0.0",
  "sqlalchemy>=2.0.42,<2.1.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[tool.uv]
managed = true
python-preference = "only-managed"
dev-dependencies = [
  "ruff>=0.5.0,<1.0.0",
  "black>=24.4.0,<25.0.0",
  "mypy>=1.10.0,<2.0.0",
  "types-requests>=2.32.0.0,<3.0.0"
]

[tool.black]
line-length = 120
target-version = ["py313"]
skip-string-normalization = false
include = "\\.pyi?$"
extend-exclude = '''
/(
  \.eggs
| \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| build
| dist
| node_modules
| migrations
)/
'''

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
  ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".mypy_cache", ".nox", ".pants.d",
  ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", "__pypackages__", "_build", "buck-out",
  "build", "dist", "node_modules", "venv"
]

[tool.ruff.lint]
select = [
  "E","W","F",     # pycodestyle/pyflakes
  "I",             # isort (keep sorting)
  "B",             # flake8-bugbear
  "C4",            # flake8-comprehensions
  "UP",            # pyupgrade
  "ARG",           # unused arguments
  "SIM",           # simplify
  "TCH",           # type-checking imports
  "PTH",           # pathlib
  "ERA",           # eradicate
  "PL",            # pylint (subset)
  "PERF",          # performance
  "S",             # security
  "RUF"            # ruff-specific
]
ignore = [
  "E501",      # handled by Black
  "B008",      # FastAPI defaults
  "C901",      # complexity
  "PLR0913",   # many args (endpoints)
]
# Keep F401 reported but NEVER auto-removed on save:
unfixable = ["ERA001", "F401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101","PLR2004"]
"migrations/**" = ["E501","F401","F403","F405"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["backend"]
combine-as-imports = true
force-sort-within-sections = true

[tool.mypy]
python_version = "3.13"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
exclude = '(^\.venv/|^migrations/|^node_modules/)'
